# dotnet_cmake_examples

./: CMakeSettings.json  CMakelists.txt  README.md
WinFormsApp/: CMakeLists.txt  Form1.Designer.cs
WpfApp/: CMakeLists.txt  MainWindow.xaml
